[NodeJS] Release Doc

--- a/nodejs/22.06.md
+++ b/nodejs/22.06.md
@@ -1,17 +1,16 @@
 <p>
-  This documentation is for the Countly NodeJS SDK version 24.10.X. The SDK source
-  code repository can be found
-  <a href="https://github.com/Countly/countly-sdk-nodejs" target="_blank" rel="noopener noreferrer">here.</a>
+  This documentation shows how to use Countly NodeJS SDK to track your nodejs running
+  device or server, like tracking your API. It applies to the SDK version 22.06.0.
 </p>
 <div class="callout callout--info">
   <p>
     Click
-    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#h_01H9QCP8G7S1YR45QYHX6DQJ4D" target="_blank" rel="noopener noreferrer">here </a>to
+    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#h_01H9QCP8G7S1YR45QYHX6DQJ4D" target="_self" rel="undefined">here, </a>to
     access the documentation for older SDK versions.
   </p>
 </div>
 <p>
-  Countly NodeJS runs with the following node versions and up:
+  Countly NodeJS runs with the following node versions, and up:
 </p>
 <table style="border-collapse: collapse; width: 100%;" border="1">
   <tbody>
@@ -28,15 +27,18 @@
   </tbody>
 </table>
 <p>
-  To examine the example integrations, please have a look
-  <a href="#h_01HPK9ZBQXA5AYYG2CVHWWWVHB" target="_blank" rel="noopener noreferrer">here.</a>
+  If you want to get the Countly NodeJS SDK codebase locally you can go to the
+  GitHub repo <a href="https://github.com/Countly/countly-sdk-nodejs">here</a>
+  and download it inside your project folder by executing the lines:
 </p>
+<pre><code class="javascript">git clone https://github.com/Countly/countly-sdk-nodejs.git
+</code></pre>
 <h1 id="h_01HABTSEDFXYDEN0QDRY7DEVR7">Adding the SDK to the project</h1>
 <p>
   You can reach Countly NodeJS SDK npm package
-  <a href="https://www.npmjs.com/package/countly-sdk-nodejs" target="_blank" rel="noopener noreferrer">here</a>.
-  To add it to your project, you would use a command similar to these with your
-  preferred package manager:
+  <a href="https://www.npmjs.com/package/countly-sdk-nodejs">here</a>. To add it
+  to your project, you would use a command similar to these with your preferred
+  package manager:
 </p>
 <div class="tabs">
   <div class="tabs-menu">
@@ -60,7 +62,7 @@
   Wherever you want to integrate Countly NodeJS SDK, you should import 'countly-sdk-nodejs'
   and initialize Countly. Here, you would also need to provide your application
   key and server URL. Please check
-  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KX44C9SF48WRPQNCP3" target="_blank" rel="noopener noreferrer">here</a>
+  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KX44C9SF48WRPQNCP3">here</a>
   for more information on how to acquire your application key (APP_KEY) and server
   URL.
 </p>
@@ -68,33 +70,17 @@
 <pre><code class="javascript">var Countly = require('countly-sdk-nodejs');
 
 Countly.init({
-  app_key: "YOUR-APP-KEY",
-  url: "https://your_server_url/"
+    app_key: "YOUR-APP-KEY",
+    url: "https://your_server_url/"
 });</code></pre>
 <div class="callout callout--info">
   <p>
     If you are in doubt about the correctness of your Countly SDK integration
     you can learn about the verification methods from
-    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXE6YKVETHDWPP8J3K" target="_blank" rel="noopener noreferrer">here</a>.
+    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXE6YKVETHDWPP8J3K" target="blank">here</a>.
   </p>
 </div>
-<h2 id="h_01HABTSEDFRBJ54MX797V7QV2K">SDK Data Storage</h2>
-<p>
-  Countly stores information like requests, events and device ID locally as JSON
-  objects before using it to ensure data consistency. Default location of this
-  stored data is at the base of your project under a folder called Data. You can
-  change the location or file name during the initialization by using the storage_path
-  flag:
-</p>
-<pre><code class="javascript">var Countly = require('countly-sdk-nodejs');
-
-Countly.init({
-  app_key: "YOUR-APP-KEY",
-  url: "https://your_server_url/",
-  // by default it is "../data/"
-  storage_path: "../your_storage/path" 
-});</code></pre>
-<h1 id="h_01HABTSEDFSJWTK0GZKKTYSBMK">SDK Logging</h1>
+<h2 id="h_01HABTSEDFSJWTK0GZKKTYSBMK">SDK Logging</h2>
 <p>
   If you encounter a problem or want to see if everything is working smoothly just
   turning on the logs during the initialization is all you really need. You can
@@ -104,9 +90,9 @@ Countly.init({
 <pre><code class="javascript">var Countly = require('countly-sdk-nodejs');
 
 Countly.init({
-  app_key: "YOUR-APP-KEY",
-  url: "https://your_server_url/",
-  debug: true
+    app_key: "YOUR-APP-KEY",
+    url: "https://your_server_url/",
+    debug: true
 });</code></pre>
 <p>
   But sometimes you might want to see the logs only for a small time frame or some
@@ -121,7 +107,23 @@ Countly.setLoggingEnabled(true);
 
 //to turn off the logs
 Countly.setLoggingEnabled(false);</code></pre>
-<h1 id="h_01HABTSEDF3VWA2BT8QJQH6NJ7">Crash Reporting</h1>
+<h2 id="h_01HABTSEDFRBJ54MX797V7QV2K">SDK Data Storage</h2>
+<p>
+  Countly stores information like requests, events and device ID locally as JSON
+  objects before using it to ensure data consistency. Default location of this
+  stored data is at the base of your project under a folder called Data. You can
+  change the location or file name during the initialization by using the storage_path
+  flag:
+</p>
+<pre><code class="javascript">var Countly = require('countly-sdk-nodejs');
+
+Countly.init({
+    app_key: "YOUR-APP-KEY",
+    url: "https://your_server_url/",
+    // by default it is "../data/"
+    storage_path: "../your_storage/path" 
+});</code></pre>
+<h1 id="h_01HABTSEDF3VWA2BT8QJQH6NJ7">Crash reporting</h1>
 <p>
   Countly also provides a way to track NodeJS errors on your server.
 </p>
@@ -162,7 +164,7 @@ catch(ex){
 </p>
 <pre><code class="javascript">Countly.add_log("user clicked button a");</code></pre>
 <h1 id="h_01HABTSEDFRP0KEF7CKVC9F0EN">Events</h1>
-<h2 id="h_01HABTSEDFBFYNW9KRYV3E4WNS">Recording Events</h2>
+<h2 id="h_01HABTSEDFBFYNW9KRYV3E4WNS">Adding an event</h2>
 <p>
   An event is a way to track any custom actions or other data you want to track
   from your website. You can also provide segments to be able to view breakdown
@@ -225,7 +227,7 @@ Countly.end_event({
   }
 });</code></pre>
 <h1 id="h_01HABTSEDFMAR3E3AT8DGSRZ98">Session</h1>
-<h2 id="h_01HABTSEDF4A4P0ZKPFN0MNXYR">Manual Sessions</h2>
+<h2 id="h_01HABTSEDF4A4P0ZKPFN0MNXYR">Beginning a session</h2>
 <p>
   This method would allow you to control sessions manually. Use it only, if you
   don't call track_sessions method.
@@ -235,7 +237,7 @@ Countly.end_event({
   automatically, and you will need to do that manually.
 </p>
 <pre><code class="javascript">Countly.begin_session(noHeartBeat);</code></pre>
-<h2 id="h_01HABTSEDFV69Z7DB61R3HYK5N">Extending a Session</h2>
+<h2 id="h_01HABTSEDFV69Z7DB61R3HYK5N">Extending a session</h2>
 <p>
   By default (if <strong>noHeartBeat</strong> was not provided in
   <strong>begin_session</strong>) Countly SDK will extend session itself, but if
@@ -244,7 +246,7 @@ Countly.end_event({
   <strong>session_duration</strong> call, whatever was the last one.
 </p>
 <pre><code class="javascript">Countly.session_duration(sec)</code></pre>
-<h2 id="h_01HABTSEDFZ22Z8Q8SH0DDMRGS">Ending a Session</h2>
+<h2 id="h_01HABTSEDFZ22Z8Q8SH0DDMRGS">Ending a session</h2>
 <p>
   When visitor is leaving your app or website, you should end his session with
   this method, optionally providing amount of seconds since last
@@ -252,7 +254,7 @@ Countly.end_event({
   was the last one.
 </p>
 <pre><code class="javascript">Countly.end_session(sec)</code></pre>
-<h1 id="h_01HABTSEDGBS3Z9EX21HVYSCVS">View Tracking</h1>
+<h1 id="h_01HABTSEDGBS3Z9EX21HVYSCVS">View tracking</h1>
 <p>
   This method allows you to track different parts of your application, called views.
   You can track how much time is spent on each part of the application.
@@ -276,7 +278,7 @@ Countly.end_event({
 </ul>
 <pre><code class="javascript">//Provide view segments
 Countly.track_view("viewname", {theme:"red", mode:"fullscreen"});</code></pre>
-<h1 id="h_01HABTSEDGC162BVG9Y5PZY0YE">Device ID Management</h1>
+<h1 id="h_01HABTSEDGC162BVG9Y5PZY0YE">Device ID management</h1>
 <p>
   In some cases you may want to change the ID of the user/device that you provided
   or Countly generated automatically, for example, when user was changed.
@@ -294,13 +296,6 @@ Countly.track_view("viewname", {theme:"red", mode:"fullscreen"});</code></pre>
   data, and then authenticated and you want to change ID to your internal id of
   this user, to keep tracking it across multiple devices.
 </p>
-<div class="callout callout--warning">
-  <p>
-    <strong>Performance risk.</strong> Changing device id with server merging
-    results in huge load on server as it is rewriting all the user history. This
-    should be done only once per user.
-  </p>
-</div>
 <p>
   This call will merge any data recorded for current ID and save it as user with
   new provided ID.
@@ -406,59 +401,49 @@ var test = Countly.get_remote_config("test");</code><code class="javascript"></c
   If consents are enabled, to fetch the Remote Config data you have to provide
   the 'remote-config' consent for this feature to work.
 </p>
-<h1 id="h_01HABTSEDG3ZAZTK7ARF28M1FH">User Feedback</h1>
+<h1 id="h_01HABTSEDG3ZAZTK7ARF28M1FH">User feedback</h1>
 <p>
   If there is any way you can get some user feedback, there is not a simple method
   to report collected data to Countly.
 </p>
 <pre><code class="javascript">//user feedback
 Countly.report_feedback({
-  widget_id:"1234567890",
-  contactMe: true,
-  rating: 5,
-  email: "user@domain.com",
-  comment: "Very good"
+    widget_id:"1234567890",
+    contactMe: true,
+    rating: 5,
+    email: "user@domain.com",
+    comment: "Very good"
 });</code></pre>
-<h1 id="h_01HABTSEDG0TDK1PCNWM8QENG0">User Profiles</h1>
-<div class="callout callout--info">
-  <p>
-    User Profiles is a
-    <a href="https://countly.com/enterprise" target="_blank" rel="noopener noreferrer">Countly Enterprise</a>
-    plugin and built-in
-    <a href="https://countly.com/flex" target="_blank" rel="noopener noreferrer">Flex</a>.
-  </p>
-</div>
-<h2 id="h_01HABTSEDG9HV99DN895KFJRCY">Setting User Properties</h2>
+<p>&nbsp;</p>
+<h1 id="h_01HABTSEDG0TDK1PCNWM8QENG0">User profiles</h1>
+<h2 id="h_01HABTSEDG9HV99DN895KFJRCY">User details</h2>
 <p>
-  If you have any details about the user/visitor, you can provide that information
-  to Countly. This will allow you to track each and every specific user on the
-  "User Profiles" tab.
-</p>
-<p>
-  If a parameter is set as an empty string, it will be deleted on the server side.
+  If you have any details about the user/visitor, you can provide Countly with
+  that information. This will allow you track each and specific user on "User Profiles"
+  tab, which is available with
+  <a href="http://count.ly/enterprise-edition">Countly Enterprise Edition</a>.
 </p>
 <p>The list of possible parameters you can pass is:</p>
 <pre><code class="javascript">Countly.user_details({
-  "name": "Arturs Sosins",
-  "username": "ar2rsawseen",
-  "email": "test@test.com",
-  "organization": "Countly",
-  "phone": "+37112345678",
-  //Web URL pointing to user picture
-  "picture": "https://pbs.twimg.com/profile_images/1442562237/012_n_400x400.jpg", 
-  "gender": "M",
-  "byear": 1987, //birth year
-  "custom":{
-    "key1":"value1",
-    "key2":"value2",
-    ...
-  }
+    "name": "Arturs Sosins",
+    "username": "ar2rsawseen",
+    "email": "test@test.com",
+    "organization": "Countly",
+    "phone": "+37112345678",
+    //Web URL pointing to user picture
+    "picture": "https://pbs.twimg.com/profile_images/1442562237/012_n_400x400.jpg", 
+    "gender": "M",
+    "byear": 1987, //birth year
+    "custom":{
+      "key1":"value1",
+      "key2":"value2",
+      ...
+    }
  });</code></pre>
-<h2 id="h_01HABTSEDGZJXM38TNGRZDK69F">Modifying Data</h2>
+<h2 id="h_01HABTSEDGZJXM38TNGRZDK69F">Modifying custom data</h2>
 <p>
-  Additionally, you can manipulate custom data values in different ways, like incrementing
-  the current value on the server or storing an array of values under the same
-  property.
+  Additionally you can do different manipulations on custom data values, like increment
+  current value on server or store array of values under same property.
 </p>
 <p>Below is the list of available methods:</p>
 <pre><code class="javascript">Countly.userData.set(key, value) //set custom property
@@ -480,16 +465,16 @@ Countly.userData.save() //send userData to server</code></pre>
 <p>Here is an example of how to report network trace:</p>
 <pre><code class="javascript">//report network trace
 Countly.report_trace({
-  type: "network", //device or network
-  name: "/some/endpoint", //use name to identify trace and group them by
-  stz: 1234567890123, //start timestamp in miliseconds
-  etz: 1234567890123, //end timestamp in miliseconds
-  app_metrics: {
-    response_time: 1000,
-    response_code: 200,
-    response_payload_size: 12345,
-    request_payload_size: 5432
-  }
+    type: "network", //device or network
+    name: "/some/endpoint", //use name to identify trace and group them by
+    stz: 1234567890123, //start timestamp in miliseconds
+    etz: 1234567890123, //end timestamp in miliseconds
+    app_metrics: {
+        response_time: 1000,
+        response_code: 200,
+        response_payload_size: 12345,
+        request_payload_size: 5432
+    }
 });</code></pre>
 <p>&nbsp;And here is an example of device trace:</p>
 <pre><code class="javascript">//user built in method to report app start time
@@ -497,117 +482,80 @@ Countly.report_app_start();
 
 //or report device trace manually
 Countly.report_trace({
-  type: "device", //device or network
-  name: "My App", //use name to identify trace and group them by
-  stz: 1234567890123, //start timestamp in miliseconds
-  etz: 1234567890123, //end timestamp in miliseconds
-  app_metrics: {
-    duration: 1000,
-  }
+    type: "device", //device or network
+    name: "My App", //use name to identify trace and group them by
+    stz: 1234567890123, //start timestamp in miliseconds
+    etz: 1234567890123, //end timestamp in miliseconds
+    app_metrics: {
+        duration: 1000,
+    }
 });</code></pre>
 <p>Or you can report any custom traces to provide duration:</p>
 <pre><code class="javascript">//or report device trace manually
 Countly.report_trace({
-  type: "device", //device or network
-  name: "Some process we launched", //use name to identify trace and group them by
-  stz: 1234567890123, //start timestamp in miliseconds
-  etz: 1234567890123, //end timestamp in miliseconds
-  app_metrics: {
-    duration: 1000,
-  }
+    type: "device", //device or network
+    name: "Some process we launched", //use name to identify trace and group them by
+    stz: 1234567890123, //start timestamp in miliseconds
+    etz: 1234567890123, //end timestamp in miliseconds
+    app_metrics: {
+        duration: 1000,
+    }
 });</code></pre>
-<h1 id="h_01HABTSEDHGNE0G3EBG6XX39ZE">Other Features and Notes</h1>
+<h1 id="h_01HABTSEDHGNE0G3EBG6XX39ZE">Other features and notes</h1>
 <h2 id="h_01HAXVDTRGE7AP3385T2HSWWT0">SDK Config Parameters Explained</h2>
 <p>
   Here are the properties you can setup on Countly initialization
 </p>
 <ul>
   <li>
-    <strong>app_key</strong> - Mandatory! The App Key for your app which created
-    in Countly.
+    <strong>app_key</strong> - mandatory, App key for your app created in Countly.
   </li>
   <li>
-    <strong>url</strong> - Mandatory! Countly server URL. You must use your server
-    URL here!
+    <strong>device_id</strong> - To identify a visitor, will be auto generated
+    if not provided.
   </li>
   <li>
-    <strong>device_id</strong> - To identify a visitor, SDK will auto-generate
-    if not provided!
+    <strong>url</strong> - Your Countly server url (default: "https://cloud.count.ly"),
+    you must use your own server URL here.
   </li>
   <li>
-    <strong>app_version</strong> - Version of your app or website.
+    <strong>app_version</strong> - (optional) The version of your app or website.
   </li>
   <li>
-    <strong>country_code</strong> - Country code for your visitor.
+    <strong>country_code</strong> - (optional) Country code for your visitor.
   </li>
   <li>
-    <strong>city</strong> - Name of the city of your visitor.
+    <strong>city</strong> - (optional) Name of the city of your visitor.
   </li>
   <li>
-    <strong>ip_address</strong> - IP address of your visitor.
+    <strong>ip_address</strong> - (optional) IP address of your visitor.
   </li>
   <li>
-    <strong>debug</strong> - Output debug info into the console (default: false).
+    <strong>debug</strong> - output debug info into console (default: false).
   </li>
   <li>
-    <strong>interval</strong> - Set an interval how often to check if there is
+    <strong>interval</strong> - set an interval how often to check if there is
     any data to report and report it (default: 500 ms).
   </li>
   <li>
-    <strong>fail_timeout</strong> - Set time in seconds to wait after a failed
-    connection to the server (default: 60 seconds).
+    <strong>fail_timeout</strong> - set time in seconds to wait after failed
+    connection to server (default: 60 seconds).
   </li>
   <li>
-    <strong>session_update</strong> - How often in seconds should session be
+    <strong>session_update</strong> - how often in seconds should session be
     extended (default: 60 seconds).
   </li>
   <li>
-    <strong>max_events</strong> - Maximum amount of events to send in one batch
+    <strong>max_events</strong> - maximum amount of events to send in one batch
     (default: 10).
   </li>
   <li>
-    <strong>force_post</strong> - Force using the post method for all requests
-    (default: false)
+    <strong>force_post</strong> - force using post method for all requests (default:
+    false)
   </li>
   <li>
-    <strong>storage_path</strong> - Where SDK would store data, including id,
-    queues, etc. (default: "../data/").
-  </li>
-  <li>
-    <strong>storage_type</strong> - Determines which storage type will be applied.
-    Built-in storage type options are:
-    <ul>
-      <li>
-        File Storage: <code>Countly.StorageTypes.FILE</code>
-      </li>
-      <li>
-        Memory Storage: <code>Countly.StorageTypes.MEMORY</code>
-      </li>
-    </ul>
-    If custom_storage_method will be used, do not use the storage type. If the
-    user didn't set the storage type, SDK applies the default. Default is:
-    <code>Countly.StorageTypes.FILE</code>
-  </li>
-  <li>
-    <strong>custom_storage_method</strong> - User-given storage methods that
-    can be used instead of the default File Storage or the optional Memory Storage
-    methods.
-    <ul>
-      <li>
-        If no storage_path is provided with the custom method, the storage
-        path will be the default path! (default: "../data/")
-      </li>
-      <li>
-        The object must contain storeGet, storeSet, and storeRemove functions!
-      </li>
-    </ul>
-    <div class="callout callout--info">
-      <p>
-        Before applying this configuration option, read
-        <a href="/hc/en-us/articles/23259053107993#h_01J9XWNKSARED5HETGGR52XGBK">this section of the document</a>
-        to get more information about providing your storage methods
-      </p>
-    </div>
+    <strong>storage_path</strong> - where SDK would store data, including id,
+    queues, etc (default: "../data/").
   </li>
   <li>
     <strong>require_consent</strong> - pass true if you are implementing GDPR
@@ -619,121 +567,129 @@ Countly.report_trace({
     provide callback function to be notified when fetching done (default: false).
   </li>
   <li>
-    <strong>http_options</strong> - Function to get http options by reference
+    <strong>http_options</strong> - function to get http options by reference
     and overwrite them, before running each request.
   </li>
   <li>
-    <strong>max_breadcrumb_count</strong> - Maximum amount of breadcrumbs to
-    store for crash logs (default: 100)
+    <strong>max_logs</strong> - maximum amount of breadcrumbs to store for crash
+    logs (default: 100)
   </li>
   <li>
-    <strong>metrics</strong> - Provide metrics override or custom metrics for
+    <strong>metrics</strong> - provide metrics override or custom metrics for
     this user. For more information on the specific metric keys used by Countly,
     check
-    <a href="https://support.count.ly/hc/en-us/articles/9290669873305#h_01HABT18WWYQ2QYPZY3GHZBA9B" target="_blank" rel="noopener noreferrer">here</a>.
+    <a href="https://support.count.ly/hc/en-us/articles/9290669873305#h_01HABT18WWYQ2QYPZY3GHZBA9B" target="_self">here</a>.
   </li>
 </ul>
-<p>Setting up properties in Countly NodeJS SDK is as follows</p>
-<pre><code class="javascript">Countly.init({
-  debug:false,
-  app_key:"YOUR_APP_KEY",
-  device_id:"1234-1234-1234-1234",
-  url: "https://your.server.ly",
-  app_version: "1.2",
-  country_code: "LV",
-  city: "Riga",
-  storage_type: Countly.StorageTypes.MEMORY,
-  ip_address: "83.140.15.1",
-  http_options: function(options){
-    options.headers["user-agent"] = "Test";
-  },
-  metrics:{
-    _os: "Ubuntu",
-    _os_version: "16.04",
-    _device: "aws-server"
-  }
-});</code></pre>
-<h2 id="h_01HPK9ZBQXA5AYYG2CVHWWWVHB">Example Integrations</h2>
 <p>
-  <a href="https://github.com/Countly/countly-sdk-nodejs/blob/master/examples/apm_example.js" target="_blank" rel="noopener noreferrer">apm_example</a>
-  is a simple APM integration.<br>
-  <a href="https://github.com/Countly/countly-sdk-nodejs/blob/master/examples/bulk_import_example.js" target="_blank" rel="noopener noreferrer">bulk_import_example</a>
-  is a simple bulk import example.<br>
-  <a href="https://github.com/Countly/countly-sdk-nodejs/blob/master/examples/example.js" target="_blank" rel="noopener noreferrer">example</a>
-  covers most of the functionalities.<br>
-  <a href="https://github.com/Countly/countly-sdk-nodejs/blob/master/examples/multi-process.js" target="_blank" rel="noopener noreferrer">multi-process</a>
-  is a simple demonstration for multi-instancing the Countly SDK.
+  Setting up properties in Countly NodeJS SDK is as follows (if you have your own
+  server, use it instead of try.count.ly):
 </p>
+<pre><code class="javascript">Countly.init({
+    debug:false,
+    app_key:"YOUR_APP_KEY",
+    device_id:"1234-1234-1234-1234",
+    url: "https://try.count.ly",
+    app_version: "1.2",
+    country_code: "LV",
+    city: "Riga",
+    ip_address: "83.140.15.1",
+    http_options: function(options){
+        options.headers["user-agent"] = "Test";
+    },
+    metrics:{
+        _os: "Ubuntu",
+        _os_version: "16.04",
+        _device: "aws-server"
+    }
+});</code></pre>
 <h2 id="h_01HABTSEDHW6BSYV7VT45G2KFZ">SDK Internal Limits</h2>
 <p>
-  If values or keys provided by the user exceeds certain internal limits, they
-  will be truncated. Please have a look
-  <a href="/hc/en-us/articles/9290669873305#sdk_internal_limits" target="_blank" rel="noopener noreferrer">here</a>
-  for the list of properties effected by these limits.
+  Countly is highly customizable and let's you take a huge part at the control
+  of the system in multiple ways. From customizing segmentation values to changing
+  event keys. Great liberty comes with the cost of great responsibility. As a sanity
+  check measure Countly relies on internal limits to get a hold of the free flow
+  of values, keys, character and more. These internal limits are again customizable
+  at initialization and current limits and their default values are as follows:
 </p>
+<ul>
+  <li>
+    <strong>maxKeyLength</strong> - 128 chars. Keys that exceed this limit will
+    be truncated.
+  </li>
+  <ul>
+    This is used for setting the maximum size of all string keys including:
+    <li>- event names</li>
+    <li>- view names</li>
+    <li>- custom trace key name (APM)</li>
+    <li>- custom metric key (apm)</li>
+    <li>- segmentation key (for all features)</li>
+    <li>- custom user property</li>
+    <li>
+      - custom user property keys that are used for property modifiers (mul,
+      push, pull, set, increment, etc)
+    </li>
+  </ul>
+  <li>
+    <strong>maxValueSize</strong> - 256 chars. Values that exceed this limit
+    will be truncated.
+  </li>
+  <ul>
+    This is used for setting the maximum size of all values in key-value pairs
+    including:
+    <li>- segmentation value in case of strings (for all features)</li>
+    <li>- custom user property string value</li>
+    <li>
+      - user profile named key (username, email, etc) string values. Except
+      "picture" field, that has a limit of 4096 chars
+    </li>
+    <li>
+      - custom user property modifier string values. For example, for modifiers
+      like "push", "pull", "setOnce", etc.
+    </li>
+    <li>- breadcrumb text</li>
+    <li>
+      - manual feedback widget reporting fields (reported as event)
+    </li>
+    <li>- rating widget response (reported as event)</li>
+  </ul>
+  <li>
+    <strong>maxSegmentationValues</strong> - 30 dev entries. Entries that exceed
+    this limit will be removed.<br>
+    To set the maximum amount of custom segmentation that can be recorded in
+    one event.
+  </li>
+  <li>
+    <strong>maxBreadcrumbCount</strong> - 100 entries. If the limit is exceeded,
+    the oldest entry will be removed.<br>
+    To limit the amount of breadcrumbs that can be recorded before the oldest
+    one is deleted from the logs.
+  </li>
+  <li>
+    <strong>maxStackTraceLinesPerThread</strong> - 30 lines. Lines that exceed
+    this entry will be removed.<br>
+    Sets the maximum number of stack trace lines that can be recorded per thread.
+  </li>
+  <li>
+    <strong>maxStackTraceLineLength</strong> - 200 chars. Lines that exceed this
+    limit will be truncated.<br>
+    This can set the maximum number of characters that is allowed per stack trace
+    line. This also limits the crash message length.
+  </li>
+</ul>
 <p>
-  You can override these internal limits during initialization.
-</p>
-<h3 id="h_01HRY51Q9K26ZGFWJS9R87N0WQ">Key Length</h3>
-<p>
-  <code class="javascript">max_key_length</code> - 128 chars by default. Keys that
-  exceed this limit will be truncated.
+  To change these default values, all you have to do is to set the properties during
+  the initialization:
 </p>
 <pre><code class="javascript">Countly.init({
-  app_key:"YOUR_APP_KEY",
-  url: "YOUR_SERVER_URL",
-  max_key_length: 50
-});</code></pre>
-<h3 id="h_01HRY51XC20ZVT47JN7GYTAZ7D">Value Size</h3>
-<p>
-  <code class="javascript">max_value_size</code> - 256 chars by default. Values
-  that exceed this limit will be truncated.
-</p>
-<pre><code class="javascript">Countly.init({
-  app_key:"YOUR_APP_KEY",
-  url: "YOUR_SERVER_URL",
-  max_value_size: 12
-});</code></pre>
-<h3 id="h_01HRY521MHG6HD8P7JQ0BE7S8K">Segmentation Values</h3>
-<p>
-  <code class="javascript">max_segmentation_values</code> - 100 dev entries by
-  default. Key/value pairs that exceed this limit in a single event will be removed.
-</p>
-<pre><code class="javascript">Countly.init({
-  app_key:"YOUR_APP_KEY",
-  url: "YOUR_SERVER_URL",
-  max_segmentation_values: 67
-});</code></pre>
-<h3 id="h_01HRY526FQC2R9BQRTYB1B2VF0">Breadcrumb Count</h3>
-<p>
-  <code class="javascript">max_breadcrumb_count</code> - 100 entries by default.
-  If the limit is exceeded, the oldest entry will be removed from stored breadcrumbs.
-</p>
-<pre><code class="javascript">Countly.init({
-  app_key:"YOUR_APP_KEY",
-  url: "YOUR_SERVER_URL",
-  max_breadcrumb_count: 45
-});</code></pre>
-<h3 id="h_01HRY52BYPANSEJ27WFFMWNR1F">Stack Trace Lines Per Thread</h3>
-<p>
-  <code class="javascript">max_stack_trace_lines_per_thread</code> - 30 lines by
-  default. Crash stack trace lines that exceed this limit (per thread) will be
-  removed.
-</p>
-<pre><code class="javascript">Countly.init({
-  app_key:"YOUR_APP_KEY",
-  url: "YOUR_SERVER_URL",
-  max_stack_trace_lines_per_thread: 23
-});</code></pre>
-<h3 id="h_01HRY52J9BCCYQ00XJ9PWY9PFZ">Stack Trace Line Length</h3>
-<p>
-  <code class="javascript">max_stack_trace_line_length</code> - 200 chars by default.
-  Crash stack trace lines that exceed this limit will be truncated.
-</p>
-<pre><code class="javascript">Countly.init({
-  app_key:"YOUR_APP_KEY",
-  url: "YOUR_SERVER_URL",
-  max_stack_trace_line_length: 10
+    app_key:"YOUR_APP_KEY",
+    url: "https://try.count.ly",
+    max_key_length: 500,
+    max_value_size: 12,
+    max_segmentation_values: 23,
+    max_breadcrumb_count: 80,
+    max_stack_trace_lines_per_thread: 50,
+    max_stack_trace_line_length: 300
 });</code></pre>
 <h2 id="h_01HAXVDTRGNHGD4SW5XH7NBE8W">Setting Maximum Request Queue Size</h2>
 <p>
@@ -759,10 +715,10 @@ Countly.report_trace({
   1,000 will be used.
 </p>
 <div class="javascript">
-  <pre><code class="javascript">Countly.init({
-  app_key:"YOUR_APP_KEY",
-  url: "https://try.count.ly",
-  queueSize: 5000
+  <pre><code class="">Countly.init({
+    app_key:"YOUR_APP_KEY",
+    url: "https://try.count.ly",
+    queueSize: 5000
 });</code></pre>
 </div>
 <h2 id="h_01HAXVDTRK5DCMFC9FKEDKD529">Attribution</h2>
@@ -776,12 +732,12 @@ Countly.report_trace({
 </p>
 <pre><code class="javascript">//or provide campaign id yourself
 Countly.report_conversion("MyCampaignID");</code></pre>
-<h2 id="h_01HAXVDTRKE32GSAT0EJ4MF7G1">Make Direct Request</h2>
+<h2 id="h_01HAXVDTRKE32GSAT0EJ4MF7G1">Make raw request</h2>
 <p>
   If you are switching between users a lot, or changing some other data, which
   is hard to handle over multiple processes, etc. You can simply make a raw request
   with all possible SDK parameters described in
-  <a href="https://api.count.ly/reference/i" target="_blank" rel="noopener noreferrer">API reference</a>
+  <a href="https://api.count.ly/reference/i">API reference</a>
 </p>
 <pre><code class="javascript">Countly.request({
   app_key:"somekey", 
@@ -790,136 +746,4 @@ Countly.report_conversion("MyCampaignID");</code></pre>
   metrics:"{'_os':'Linux'}",
   begin_session:1
 });</code></pre>
-<h2 id="h_01J9XWNKSARED5HETGGR52XGBK">Providing Custom Storage Methods</h2>
-<p>
-  Countly NodeJS SDK permits the user to use their storage methods. To replace
-  the SDK's built-in storage options (File and Memory) during configuration, you
-  can provide preferred storage methods within an object to the
-  <code>custom_storage_method</code> parameter.
-</p>
-<p>
-  The custom object must contain the storeSet, storeGet, and storeRemove functions
-  for the SDK to accept the user-given methods and function correctly!
-</p>
-<p>
-  Objects containing the methods with correct naming will be evaluated as valid
-  objects, and the SDK will use the provided custom methods as internal storage
-  methods.
-</p>
-<p>While evaluating objects, SDK checks for, if:</p>
-<ul>
-  <li>an object is provided</li>
-  <li>
-    that object has the valid keys (storeSet, storeGet, storeRemove)
-  </li>
-  <li>the values are functions</li>
-</ul>
-<p>
-  In cases where an invalid object is provided as the custom method, SDK will ignore
-  the provided object and switch back to the default storage type, File storage.
-</p>
-<p>
-  Keep in mind that passing the internal validity check for the methods does not
-  guarantee that the custom logic applied is correct. You must ensure that your
-  custom implementation functions properly and that the SDK runs without issues
-  when integrated with the custom methods.
-</p>
-<p>
-  If custom storage methods are provided, do not fill <code>storage_type</code>
-  parameters during configuration.
-</p>
-<p>
-  If, during configuration, <code>storage_path</code> parameter is not provided,
-  SDK will use the default storage path. The default storage path is ("../data/").
-  This parameter must be provided to use custom methods with other desired paths!
-</p>
-<p>
-  Custom Storage Object must contain the 3 main methods SDK uses internally;
-</p>
-<ul>
-  <li>
-    <strong>storeSet(key, value, callback)</strong> - must save the provided
-    key/value pair into the storage. Callback is a function that is invoked to
-    indicate the result of the operation after the operation is complete or failed.
-    Parameters:
-    <ul>
-      <li>
-        <strong>key(string)</strong> - the key to associate with the value.
-      </li>
-      <li>
-        <strong>value(null | boolean | number | string | object)</strong>
-        - the value to store (can be null, primitive, or an object).
-      </li>
-      <li>
-        <strong>callback(function)</strong> - after the value is stored under
-        the given key, you should call the callback if given, with the error
-        object of the failed operation or with null if the operation succeeds.
-      </li>
-    </ul>
-  </li>
-  <li>
-    <strong>storeGet(key, def)</strong> - must return the value for the provided
-    key. If the value for the key does not exist, it should return the def value.
-    Parameters:
-    <ul>
-      <li>
-        <strong>key(string)</strong> - the key that's associated with the
-        value.
-      </li>
-      <li>
-        <strong>def(null | boolean | number | string | object)</strong> -
-        default value to use if it doesn't set (can be null, primitive, or
-        an object).
-      </li>
-    </ul>
-  </li>
-  <li>
-    <strong>storeRemove(key)</strong> - must remove the key and value from the
-    storage for the provided key. Parameters:<br>
-    <ul>
-      <li>
-        <strong>key(string)</strong> - the key that's associated with the
-        value to remove.
-      </li>
-    </ul>
-  </li>
-</ul>
-<p>Custom Storage Method object should be like this:</p>
-<pre><code>const customStorageMethods = {
-    /**
-     * @example
-     * customStorageMethods.storeSet('myKey', 'myValue', function(error) {
-     *   if (error) {
-     *     console.error('Failed to store value:', error);
-     *   } else {
-     *     console.log('Value stored successfully.');
-     *   }
-     * });
-     */
-    storeSet: function(key, value, callback) {
-        // your storeSet method
-    },
-    /**
-     * @example
-     * let value = customStorageMethods.storeGet('myKey', 'defaultValue');
-     * console.log('Retrieved value:', value);
-     */
-    storeGet: function(key, def) {
-        // your storeGet method
-    },
-    /**
-     * @example
-     * customStorageMethods.storeRemove('myKey');
-     */
-    storeRemove: function(key) {
-        // your storeRemove method
-    },
-};
-</code></pre>
-<h1 id="h_01HNANT8H3P3W2PXB0CCY2FNBW">FAQ</h1>
-<h2 id="h_01HNANK3XPZ7429V5Z2FJ9MMZ5">What Information is Collected by the SDK?</h2>
-<p>
-  The data that SDKs gather to carry out their tasks and implement the necessary
-  functionalities is mentioned
-  <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HJ5MD0WB97PA9Z04NG2G0AKC" target="_blank" rel="noopener noreferrer">here</a>
-</p>
+<p>&nbsp;</p>
