--- a/web/24.4.md
+++ b/web/24.4.md
@@ -1,5 +1,5 @@
 <p>
-  This documentation is for the Countly Web SDK version 24.11.X. The SDK source
+  This documentation is for the Countly Web SDK version 24.4.X. The SDK source
   code repository can be found
   <a href="https://github.com/Countly/countly-sdk-web">here</a>.
 </p>
@@ -99,11 +99,11 @@
 <a href="https://cdn.jsdelivr.net/npm/countly-sdk-web@latest/lib/countly.min.js" target="_blank" rel="noopener noreferrer">countly.min.js</a></code></pre>
   </div>
   <div class="tab is-hidden">
-    <pre><code class="javascript">// 24.11.0 non minified
-<a href="https://cdn.jsdelivr.net/npm/countly-sdk-web@24.11.0/lib/countly.js" target="_blank" rel="noopener noreferrer">countly.js</a>
+    <pre><code class="javascript">// 24.4.0 non minified
+<a href="https://cdn.jsdelivr.net/npm/countly-sdk-web@24.4.0/lib/countly.js" target="_blank" rel="noopener noreferrer">countly.js</a>
 
-// 24.11.0 minified (<span>JSDelivr</span> or Cloudflare)
-<a href="https://cdn.jsdelivr.net/npm/countly-sdk-web@24.11.0/lib/countly.min.js" target="_blank" rel="noopener noreferrer">countly.min.js</a> or <a href="https://cdnjs.cloudflare.com/ajax/libs/countly-sdk-web/24.11.0/countly.min.js" target="_blank" rel="noopener noreferrer">countly.min.js</a></code></pre>
+// 24.4.0 minified (<span>JSDelivr</span> or Cloudflare)
+<a href="https://cdn.jsdelivr.net/npm/countly-sdk-web@24.4.0/lib/countly.min.js" target="_blank" rel="noopener noreferrer">countly.min.js</a> or <a href="https://cdnjs.cloudflare.com/ajax/libs/countly-sdk-web/24.4.0/countly.min.js" target="_blank" rel="noopener noreferrer">countly.min.js</a></code></pre>
   </div>
 </div>
 <p>
@@ -854,7 +854,7 @@ if (idType === Countly.DeviceIdType.SDK_GENERATED) {
 </ul>
 <div class="callout callout--info">
   <p>
-    <span style="font-weight: 400;">If you need a more complicated logic then you will need to use this method mentioned <a href="https://support.countly.com/hc/en-us/articles/31592459504537-Web-analytics-23-12-X#h_01HABTQ438HCZ8FJVAE34W49KP" target="_blank" rel="noopener noreferrer">here</a> instead.</span>
+    <span style="font-weight: 400;">If you need a more complicated logic or using the SDK version 24.4.0 then you will need to use this method mentioned <a href="https://support.countly.com/hc/en-us/articles/31592459504537-Web-analytics-23-12-X#h_01HABTQ438HCZ8FJVAE34W49KP" target="_blank" rel="noopener noreferrer">here</a> instead.</span>
   </p>
 </div>
 <p>
